# napi-winit

./: .gitignore  .npmignore  Cargo.toml  README-zh.md  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml  ci.yml
__test__/: index.spec.mjs  index.spec.ts  time.spec.ts
crates/macros/: Cargo.toml
crates/macros/src/: for_proc.rs  lib.rs
crates/proc/: Cargo.toml
crates/proc/src/: conf_convert.rs  conf_fields.rs  conf_usage.rs  lib.rs  proxy_enum.rs  proxy_flags.rs  proxy_impl.rs  proxy_struct.rs  proxy_wrap.rs  utils.rs
crates/proc/src/utils/: meta_getter.rs
examples/: package.json  run_on_deno.ts  start.ts
examples/animation/: package.json  start.ts
examples/control-flow/: package.json  start.ts  tsconfig.json
examples/fullscreen/: package.json  start.ts
examples/hello-world/: package.json  start.ts
examples/keyboard-mouse/: package.json  start.ts  tsconfig.json
examples/multi-window/: package.json  start.ts
examples/util/: package.json  text-renderer.ts  tsconfig.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: README.md  package.json
proc/: Cargo.toml
proc/src/: enum_dsl.rs  enum_to_mod.rs  lib.rs  mapping_bitflags.rs  mapping_enum.rs  mapping_struct.rs  proxy_enum.rs  proxy_flags.rs  proxy_struct.rs  proxy_wrap.rs  simple_enum.rs  simple_struct.rs  struct_dsl.rs  utils.rs  warping_struct.rs
src/: application.rs  cursor.rs  event.rs  event2.rs  event3.rs  event_loop.rs  keyboard.rs  lib.rs  monitor.rs  window.rs
src/application/: impl_cases.rs  impl_fx_async.rs  impl_fx_sync.rs  impl_ref_async.rs  impl_ref_sync.rs  impl_safe_async.rs  impl_safe_call.rs  public.rs  type1.rs  type2.rs  type3.rs  type4.rs
src/async_helper/: async_task.rs  mod.rs  thread_helper.rs  thread_pool.rs  tokio_helper.rs
src/dpi/: mod.rs
src/extra/: convert.rs  convert_impl.rs  executor.rs  interval.rs  iter.rs  manual_convert.rs  memory.rs  mod.rs  raw_window.rs  sleep.rs  surface.rs  time.rs
src/js/: mod.rs
src/macro/: mod.rs
src/utils/: alias.rs  convert.rs  helpers.rs  mod.rs  wrap.rs
