[package]
edition = "2021"
name = "napi-winit"
version = "0.0.514"

[lib]
crate-type = ["cdylib"]

[workspace]
members = [ "./proc" ]

[dependencies]
proc = { path = "./proc" }
threadpool = "1.8.1"
once_cell = "1.21.3"

[dependencies.winit]
version = "0.30.11"
features = [ "rwh_05", "rwh_06" ]

[dependencies.tokio]
version = "1.45.1"
features = [ "time" ]
# features = [ "rt", "rt-multi-thread","time" ]

[dependencies.rwh_05]
package = "raw-window-handle"
version = "0.5.2"
features = [ "std" ]

[dependencies.rwh_06]
package = "raw-window-handle"
version = "0.6.2"
features = [ "std" ]

[dependencies.napi]
version = "3.0.0-beta.12"
default-features = false
# see https://nodejs.org/api/n-api.html#node-api-version-matrix
features = ["napi6", "async"]

[dependencies.napi-derive]
version = "3.0.0-beta.12"
features = ["type-def"]

#[dependencies.ctor]
#version = "0.4.2"

[dependencies.softbuffer]
version = "0.4.6"
default-features = false
features = [
    "x11",
    "x11-dlopen",
    "wayland",
    "wayland-dlopen",
]

[target.'cfg(target_os = "macos")'.dependencies.objc2]
version = "0.6.0"
[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3.0"

#[target.'cfg(not(target_env = "msvc"))'.dependencies.jemallocator]
#version = "0.3.2"
#features = ["disable_initial_exec_tls"]

[build-dependencies]
napi-build = "2.2.2"

[profile.release]
lto = true
strip = "symbols"
